fix: options menu overflow fix

--- a/dinamyc-organogram/src/css/styles.css
+++ b/dinamyc-organogram/src/css/styles.css
@@ -41,6 +41,7 @@ svg:not(:root) {
 
 .options-menu {
   z-index: 9999 !important;
+  overflow: visible;
 }
 
 .options-menu button {
